# example-monorepo-bazel

./: .env  .prettierrc  BUILD.bazel  README.md  WORKSPACE.bazel  eslintrc.js  jest.config.dom.js  jest.config.js  package-lock.json  package.json  tsconfig.json
fe/libs/mds-api/: BUILD.bazel  Config.ts  Cookie.ts  Core.ts  Error.ts  api.ts  error.ts  index.test.js  index.ts  init.ts  instance.test.js  instance.ts  types.ts  utils.ts
fe/libs/mds-api/__tests__/: Core.test.js
fe/libs/mds-api/test/: constants.js  index.test.js
fe/libs/mds-auth/: BUILD.bazel  index.ts
fe/libs/mds-auth/test/: constants.js  index.test.js
fe/libs/mds-auth/types/: index.ts
fe/libs/mds-cookie/: BUILD.bazel  index.test.js  index.ts  types.ts
fe/libs/mds-cookie/test/: index.test.js
fe/libs/mds-error/: BUILD.bazel
fe/libs/mds-instance/: BUILD.bazel  index.ts  utils.ts
fe/libs/mds-instance/test/: constants.js  index.test.js
fe/libs/mds-setup/: BUILD.bazel  index.ts
fe/libs/mds-types/: BUILD.bazel  index.ts  types-api-response.ts
fe/libs/pcp-path/: BUILD.bazel  index.js  index.test.js  parsePath.js  parseQuery.js  path.test.js  pcp-filter.js  pcp-filter.test.js  pcp-path.js  pcp-path.test.js  pcp-query.js  pcp-query.test.js
fe/libs/utils/: BUILD.bazel  functional.ts  index.ts
fe/libs/utils/test/: index.test.js
fe/next/: BUILD.bazel  jest.config.js  jest.setup.ts  next.config.js  tsconfig.json
fe/next/__tests__/: example.test.js  example.test.tsx
fe/next/pages/: _app.tsx  index.tsx
fe/next/src/components/: nav.tsx
fe/next/src/contexts/: auth.tsx  init.tsx
fe/next/src/hoc/: Composed.tsx  Page.tsx  withBase.tsx
lang/go/: BUILD.bazel  main.go
lang/js/: BUILD.bazel
lang/js/sum/: BUILD.bazel  sum.js
lang/js/validation/: BUILD.bazel  index.js
lang/ts/: BUILD.bazel  index.ts
