# Add rules here to build your software
# See https://docs.bazel.build/versions/master/build-ref.html#BUILD_files
package(default_visibility = ["//visibility:public"])

exports_files([
    "jest.config.js",
    "jest.config.dom.js",
    "babel.config.js",
    "tsconfig.json",
    "package.json",
    "webpack.config.js",
    ".env"
])
