package(default_visibility = ["//visibility:public"])

load("@npm//next:index.bzl", "next")

EXCLUDE_PATTERNS = [
    ".next/**",
    "out/**",
    "assets/**",    
]

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.*"],
        exclude = EXCLUDE_PATTERNS,
    ),
)

load("@npm//next:index.bzl", "next")

DEPS = [
    "//:.env",
    "//:package.json",
    "//:tsconfig.json",
    "//fe/libs/mds-api:lib",
    "@npm//dotenv",
    "@npm//typescript",
    "@npm//@types/react",
    "@npm//@types/react-dom",
    "@npm//@types/node"
]

next(
    name = "app",
    args = [
        "dev",
        "fe/next",
        "-p",
        "3001",
    ],
    data = DEPS + [
        ":sources",
    ],
)
