package(default_visibility = ["//visibility:public"])

load("@npm//next:index.bzl", "next")

EXCLUDE_PATTERNS = [
    ".next/**",
    "out/**",
    "assets/**",    
]

filegroup(
    name = "sources",
    srcs = glob(
        ["**/*.*"],
        exclude = EXCLUDE_PATTERNS,
    ),
)

load("@npm//next:index.bzl", "next")

DEPS = [
    "//:.env",
    "//:package.json",
    "//:tsconfig.json",
    "//fe/libs/mds-api:lib",
    "@npm//dotenv",
    "@npm//typescript",
    "@npm//@types/react",
    "@npm//@types/react-dom",
    "@npm//@types/node"
]

next(
    name = "app",
    args = [
        "dev",
        "fe/next",
        "-p",
        "3001",
    ],
    data = DEPS + [
        ":sources",
    ],
)

filegroup(
    name = "testfile",
    srcs = ["app"],
    output_group = "es5_sources",
)

load("//:jest.bzl", "jest_test")

jest_test(
    name = "test",
    srcs = ["__tests__/example.test.js"],
    jest_config = "//:jest.config.dom.js",
    tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
    deps = [
        ":testfile",
        "//:babel.config.js",
        "@npm//@babel/core",
        "@npm//@babel/preset-env",
        "@npm//@jest/transform",
        "@npm//babel-jest"

    ]
)


