package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    module_name = "@matahari/mds-api",
    deps = [
        "@npm//@types/node",
        "@npm//apisauce",
        "@npm//universal-cookie",
        "@npm//luxon",
        "@npm//@types/luxon",
        "@npm//ramda",
        "//fe/libs/utils:lib",
        "//fe/libs/mds-types:lib",                
    ]
)

filegroup(
    name = "api",
    srcs = ["lib"],
    output_group = "es5_sources",
)

load("//:jest.bzl", "jest_test")

jest_test(
    name = "test",
    srcs = ["__tests__/Core.test.js"],
    jest_config = "//:jest.config.js",
    tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
    deps = [
        ":api",
        "//:babel.config.js",
        "@npm//@babel/core",
        "@npm//@babel/preset-env",
        "@npm//@jest/transform",
        "@npm//babel-jest",
        "//fe/libs/utils:lib",

    ]
)

