package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    module_name = "@matahari/mds-auth",
    deps = [
        "//fe/libs/mds-cookie:lib",
        "//fe/libs/mds-instance:lib",
        "//fe/libs/mds-error:lib",
        "//fe/libs/utils:lib",
        "//fe/libs/mds-types:lib",
        "@npm//mobile-detect",        
        "@npm//lodash.isempty",
        "@npm//@types/lodash.isempty",
        "@npm//lodash.get",
        "@npm//@types/lodash.get",
        "@npm//@types/node",
        "@npm//universal-cookie",
        "@npm//moment",
        "@npm//moment-timezone",
        "@npm//apisauce"
    ]
)

filegroup(
    name = "init",
    srcs = ["lib"],
    output_group = "es5_sources",
)

load("//:jest.bzl", "jest_test")

jest_test(
    name = "test",
    srcs = [
        "test/index.test.js",
    ],
    jest_config = "//:jest.config.js",
    tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
    deps = [
        "test/constants.js",
        ":init",
        "//:babel.config.js",
        "//fe/libs/mds-cookie:lib",
        "//fe/libs/mds-instance:lib",
        "//fe/libs/mds-error:lib",
        "@npm//lodash.isempty",
        "@npm//@babel/core",
        "@npm//@babel/preset-env",
        "@npm//@jest/transform",
        "@npm//babel-jest",
        "@npm//@testing-library/dom",
        "@npm//@testing-library/jest-dom"

    ]
)
