package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    module_name = "@matahari/mds-instance",
    deps = [
        "//fe/libs/mds-cookie:lib",
        "//fe/libs/mds-types:lib",
        "@npm//mobile-detect",
        "@npm//lodash.get",
        "@npm//@types/lodash.get",
        "@npm//lodash.isempty",
        "@npm//@types/lodash.isempty",
        "@npm//apisauce"
    ]
)

filegroup(
    name = "api",
    srcs = ["lib"],
    output_group = "es5_sources",
)

load("//:jest.bzl", "jest_test")

jest_test(
    name = "test",
    srcs = ["test/index.test.js"],
    jest_config = "//:jest.config.js",
    tags = [
        # Need to set the pwd to avoid jest needing a runfiles helper
        # Windows users with permissions can use --enable_runfiles
        # to make this test work
        "no-bazelci-windows",
        # TODO: why does this fail almost all the time, but pass on local Mac?
        "no-bazelci-mac",
    ],
    deps = [
        ":api",
        "test/constants.js",
        "//:babel.config.js",
        "@npm//@babel/core",
        "@npm//@babel/preset-env",
        "@npm//@jest/transform",
        "@npm//babel-jest",
        "@npm//mobile-detect",
        "//fe/libs/mds-cookie:lib"
    ]
)

